<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_ball_detector</name>
  <version>0.0.0</version>
  <description>A package to demonstration basic image processing with ROS by detecting colored balls </description>

  <maintainer email="robotics@todo.todo">CNU Robotics</maintainer>
  <license>BSD</license>

  <depend>ball_detector_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_pipeline</depend>
  <depend>python3-opencv</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
